--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- TODO: Replace with your paper title and author names -->
   <meta name="title" content="PSTalker: Realistic 3D Talking Head Synthesis via a Semantic-aware Audio-Driven Point-based Shape">
   <!-- TODO: Write a compelling 150-160 character description of your research -->
-  <meta name="description" content="BRIEF_DESCRIPTION_OF_YOUR_RESEARCH_CONTRIBUTION_AND_FINDINGS">
+  <meta name="description" content="PSTalker: Realistic 3D Talking Head Synthesis via a Semantic-aware Audio-Driven Point-based Shape">
   <!-- TODO: Add 5-10 relevant keywords for your research area -->
   <meta name="keywords" content="KEYWORD1, KEYWORD2, KEYWORD3, machine learning, computer vision, AI">
   <!-- TODO: List all authors -->
